Delete de empresas

--- a/Seletive/empresa/templates/empresa.html
+++ b/Seletive/empresa/templates/empresa.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load filtro %}
 
 {% block head %}
 
@@ -19,7 +20,7 @@
                     {% endfor %}
                 {% endif %}
                 <h2 class="titulo">Gerenciar empresas</h2>
-                <a class="btn-nova-empresa">Nova empresa</a>
+                <a href="{% url 'nova_empresa' %}" class="btn-nova-empresa">Nova empresa</a>
             </div>
             <div class="borda-box"></div>
             <div class="body-box">
@@ -52,23 +53,27 @@
                         <th>Ação</th>
                     </tr>
 
-                    
-                        <tr class="tabela-linha" >
-                            <td>Nome da empresa</td>
-                            <td>Endereço da empresa</td>
-                            <td>
-                                <select class="form-select">       
-                                    <option></option>                    
-                                </select>
-                            </td>
-                            <td>
-                                Quantidade de vagas
-                            </td>
-                            <td>
-                                <a class="btn-excluir">Excluir empresa</a>
-                            </td>
-                        </tr>
-                    
+                      {% for empresa in empresas %}
+                           
+                            <tr {% if not forloop.counter|is_par %} class="tabela-linha" {% endif %}>
+                                <td>{{empresa.nome}}</td>
+                                <td>{{empresa.endereco}}</td>
+                                <td>
+                                   
+                                    <select class="form-select"> 
+                                        {% for tech in empresa.tecnologias.all %}
+                                            <option>{{tech}}</option>                                                  
+                                        {% endfor %}      
+                                    </select>
+                                </td>
+                                <td>
+                                    Quantidade de vagas
+                                </td>
+                                <td>
+                                    <a href="{% url 'excluir_empresa' empresa.id %}" class="btn-excluir">Excluir empresa</a>
+                                </td>
+                            </tr>
+                        {% endfor %}  
                 </table>
             </div>
 
