Listagem,filtragem e acessar uma unica empresa

--- a/Seletive/empresa/templates/empresa.html
+++ b/Seletive/empresa/templates/empresa.html
@@ -25,16 +25,17 @@
             <div class="borda-box"></div>
             <div class="body-box">
             
-                <form>
+            <form action="{% url 'empresa' %}" method="GET">{% csrf_token %}
                 <div class="row">
-                    
                         <div class="col-md-5">
                             <input type="text" placeholder="Busque pelo nome" class="form-control" name="nome">
                         </div>
 
                         <div class="col-md-4">
                             <select class="form-select" name="tecnologias">
-                                <option value="">--------</option>
+                            {% for tech in tecnologias%}
+                                <option value="{{tech.id}}">{{tech}}</option>
+                            {% endfor %}
                             </select>
                         </div>
                     
@@ -67,7 +68,12 @@
                                     </select>
                                 </td>
                                 <td>
-                                    Quantidade de vagas
+                                    {% if empresa.qtd_vagas > 0 %}
+                                        <img src="{% static 'empresa/img/flag_green.png' %}">
+                                    {% else %}
+                                        <img src="{% static 'empresa/img/flag_red.png' %}">
+                                    {% endif %}
+                                &nbsp&nbsp{{empresa.qtd_vagas}}
                                 </td>
                                 <td>
                                     <a href="{% url 'excluir_empresa' empresa.id %}" class="btn-excluir">Excluir empresa</a>
@@ -76,10 +82,6 @@
                         {% endfor %}  
                 </table>
             </div>
-
-
-            
-
         </div>
     </div>
 
